Only create a GitHub issue if the corpus tests fail on their scheduled run.
Right now, the only other way to run the tests is to invoke them manually. If I'm running them against some experiment in my branch, I don't want to alert anybody about the failure.

--- a/.github/workflows/corpus.yml
+++ b/.github/workflows/corpus.yml
@@ -30,7 +30,7 @@ jobs:
         run: go test -count=1 -v -tags corpus ./integration_tests/... | tail
 
       - name: Notify on Failure
-        if: failure()
+        if: failure() && github.event_name == 'schedule'
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -40,6 +40,6 @@ jobs:
               repo: context.repo.repo,
               title: 'Nightly Test Corpus Failed',
               body: 'The Nightly Test Corpus workflow failed. Please investigate.',
-              assignees: ['jmccarthy', 'philhassey'],
+              assignees: ['jmccarthy', 'philhassey', 'patjakdev'],
               labels: ['bug']
             })
